--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,17 +8,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/custom"
+        android:icon="@drawable/flag"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/custom"
         android:supportsRtl="true"
+        android:windowSoftInputMode="adjustResize"
         android:theme="@style/AppTheme">
-        <!--        <activity android:name=".ChatRoomActivity" />-->
-        <!--        <activity android:name=".ProfileActivity" /> &lt;!&ndash; <intent-filter> &ndash;&gt;-->
-        <!-- <action android:name="android.intent.action.MAIN" /> -->
-        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-        <!-- </intent-filter> -->
-        <activity android:name="com.example.finalProject.MainActivity">
+        <activity android:name="com.example.finalProject.Covid" />
+          <activity android:name="com.example.finalProject.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
